# clair-torch

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: Deploy MkDocs site.yml
clair_torch/: __init__.py  config.py
clair_torch/common/: __init__.py  base.py  data_io.py  enums.py  file_settings.py  general_functions.py  mixins.py  parameters.py  statistics.py  transforms.py
clair_torch/datasets/: __init__.py  base.py  collate.py  image_dataset.py  video_frame_dataset.py
clair_torch/inference/: __init__.py  hdr_merge.py  inferential_statistics.py  linearization.py  measure_linearity.py
clair_torch/metadata/: __init__.py  base.py  imaging_metadata.py
clair_torch/models/: __init__.py  base.py  icrf_model.py
clair_torch/training/: __init__.py  icrf_training.py  losses.py
clair_torch/validation/: __init__.py  io_checks.py  type_checks.py
clair_torch/visualization/: __init__.py  plotting.py
dev_tools/: construct_project_tree.py  create_annotated_tag.py
docs/: explanation.md  extra.css  index.md
docs/reference/: common.md  datasets.md  inference.md  metadata.md  models.md  summary.md  training.md  validation.md  visualization.md
explanation/: index.html
reference/common/: index.html
reference/datasets/: index.html
scripts/: compute_mean_and_std_from_videos.py  config.yaml  run_hdr_merging.py  run_icrf_model_training.py  run_image_linearization.py  run_linearity_measurement.py
site/: 404.html  index.html  objects.inv
tests/: conftest.py
(+33 files in other folders)
